--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,9 @@
 </head>
 <body id="fondo-body">
     <div id="content">
+        <!--Seccion header de la pagina-->
         <header>
+            <!--Contenedor donde se encuentra la parte de arriba de la pagina-->
             <div class="header-buscador-sesion">
                 <div class="header-buscador">
                     <input type="text">
@@ -27,20 +29,15 @@
                     <a href="#"><strong>Cerrar sesión</strong></a>
                 </div>
             </div>
-
-            <!--Contenedor donde van el logo y nombre de la empresa, y el carrito donde van los articulos a comprar-->
+            <!--Contenedor donde se encuentran el logo y el nombre de la empresa-->
             <div class="imagen-titulo">
                 <img src="{% static 'images/logoEmpresa.png' %}" alt="Logo de la empresa">
                 <h1>Deustubular S.L.</h1>
             </div>
-
-
         </header>
 
         <!--Contenedor donde se encuentran todos los enlaces para navegar por las diferentes paginas-->
         <div class="contenedor-navegacion">
-
-            <!--Nav donde se encuentran todos los enlaces para navegar por las diferentes paginas-->
             <nav class="nav-principal">
                 <a href="{% url 'empleado_list' %}">Empleados</a>
                 <a href="{% url 'proceso_list' %}">Procesos</a>
@@ -49,40 +46,29 @@
             </nav>
         </div>
 
+        <!--Contenido de cada archivo html-->
         {% block contenido %}{% endblock %}
 
-         <!--Seccion footer de la pagina-->
+        <!--Seccion footer de la pagina-->
         <footer class="footer">
-
-            <!--Contenedor del footer donde estan los enlaces de interes-->
+            <!--Div padre del footer-->
             <div class="div-footer">
-
-                <!--Contenedor de la izquierda del todo del footer-->
+                <!--div de la izquierda del footer-->
                 <div class="contenedor-footer">
-
                     <h3> | Sobre La empresa</h3>
-
-                    <!--Contenedor del footer de la izquierda con el logo y el nombre de la empresa-->
                     <div class="logo-footer">
-
                         <img src="{% static 'images/logoEmpresa.png' %}" alt="Logo de la empresa">
                         <h1>Deustubular S.L.</h1>
-
                     </div>
-
                     <h4>| Enlaces de interés</h4>
-
                     <nav class="enlaces-footer">
                         <a href="#">Intranet Deustubular S.L.</a>
                         <a href="#">Departamento IT</a>
                     </nav>
-
                 </div>
-
+                <!--div del centro del footer-->
                 <div class="contenedor-footer">
-
                     <h3>| Soporte</h3>
-
                     <div class="contenedor-footer-soporte">
                         <p>
                             En caso de existir cualquier fallo, problema o duda
@@ -92,13 +78,10 @@
                             encargados del mantenimiento de la página.
                         </p>
                     </div>
-
                 </div>
-
+                <!--div de la derecha del footer-->
                 <div class="contenedor-footer">
-
                     <h3>| Contacto</h3>
-
                     <ul>
                         <li><strong>Jon Tolosa:</strong>
                             j.tolosa@opendeusto.es</li>
@@ -109,16 +92,11 @@
                     </ul>
                 </div>
             </div>
-
+            <!--div de abajo del todo del footer-->
             <div class="div-footer-abajo">
-
-                <!--Contenedor interior con un tamaño horizontal mas reducido que su contenedor padre-->
                 <div class="div-footer-p">
-
                     <p>© 2024 Deustubular S.L. por Infocoste el Romeral S.L.U. Todos
                         los derechos reservados.</p>
-
-                    <!--Nav con los enlaces de la derecha-->
                     <nav class="enlaces-footer-abajo">
                         <a href="#">Información Legal y Privacidad</a>
                         <a href="#">Uso de Cookies y Configuración</a>
@@ -126,8 +104,6 @@
                 </div>
             </div>
         </footer>
-
     </div>
-
 </body>
 </html>
