--- a/templates/appGestionProduccion/empleado_list.html
+++ b/templates/appGestionProduccion/empleado_list.html
@@ -23,7 +23,7 @@
                         <td>{{ empleado.telefono }}</td>
                         <td><a href="{% url 'empleados_update' empleado.id %}" class="boton-enlace">Modificar</a></td>
                         <td>
-                            <form method="POST" action="{% url "empleados_delete" empleado.id%}">
+                            <form class="formulario-boton-eliminar" method="POST" action="{% url "empleados_delete" empleado.id%}">
                                 {% csrf_token %}
                                 <input class="boton-eliminar" type="submit" value="Eliminar">
                             </form>
