--- a/templates/base.html
+++ b/templates/base.html
@@ -74,7 +74,7 @@
                             En caso de existir cualquier fallo, problema o duda
                             relacionada con la página web, pónganse en contacto con
                             el departamento IT.
-                            A la derecha encontraréis los tres cotactos de los
+                            A la derecha encontraréis los tres contactos de los
                             encargados del mantenimiento de la página.
                         </p>
                     </div>
