Views.py Ordenes de fabricacion(Delete,Create, Update/Detail) urls.py actualizado. forms.py creacion de formulario OrdenForm

--- a/templates/appGestionProduccion/orden_list.html
+++ b/templates/appGestionProduccion/orden_list.html
@@ -5,11 +5,11 @@
         <table class="tabla">
             <thead>
                 <tr>
-                    <th>Referencia de fabricación</th>
+                    <th>Referencia de Fabricación</th>
                     <th>Nombre</th>
-                    <th>Fecha inicio</th>
-                    <th>Fecha fin</th>
-                    <th>crear</th>
+                    <th>Fecha de Inicio</th>
+                    <th>Fecha de Finalización</th>
+                    <th>Crear Nueva Orden</th>
                 </tr>
             </thead>
             <tbody>
@@ -27,7 +27,7 @@
         </table>
     {% else %}
         <div class="nada-creado">
-            <p>No hay órdenes creadas</p>
+            <p>No hay órdenes de fabricación creadas</p>
         </div>
     {% endif %}
 {% endblock %}
