correccion de errores

--- a/templates/appGestionProduccion/orden_create.html
+++ b/templates/appGestionProduccion/orden_create.html
@@ -1,15 +1,15 @@
 {% extends 'base.html' %}
 {% block contenido %}
     <div class="div-atras">
-        <a href="{% url 'empleado_list' %}" class="boton-atras"> <i class="fas fa-arrow-left"></i> Atrás </a>
+        <a href="{% url 'orden_list' %}" class="boton-atras"> <i class="fas fa-arrow-left"></i> Atrás </a>
     </div>
     <h2>Nueva Orden</h2>
     <div class="div-formulario">
-        <form class="formulario" action="{% url 'empleado_create' %}" method="post">
+        <form class="formulario" action="{% url 'orden_create' %}" method="post">
             {% csrf_token %}
             {{ formulario.errors }}
             {{ formulario.as_ul }}
-            <input type="submit" value="Nuevo empleado"/>
+            <input type="submit" value="Nueva orden"/>
         </form>
     </div>
 
