--- a/templates/appGestionProduccion/orden_update.html
+++ b/templates/appGestionProduccion/orden_update.html
@@ -1,15 +1,15 @@
 {% extends 'base.html' %}
 {% block contenido %}
     <div class="div-atras">
-        <a href="{% url 'equipo_list' %}" class="boton-atras"> <i class="fas fa-arrow-left"></i> Atrás </a>
+        <a href="{% url 'orden_list' %}" class="boton-atras"> <i class="fas fa-arrow-left"></i> Atrás </a>
     </div>
-    <h2>Editar un equipo</h2>
+    <h2>Editar una orden</h2>
     <div class="div-formulario">
-        <form class="formulario" action="{% url 'equipos_update' empleado.id%}" method="post">
+        <form class="formulario" action="{% url 'orden_update' orden.id %}" method="post">
             {% csrf_token %}
             {{ formulario.errors }}
             {{ formulario.as_ul }}
-            <input type="submit" value="Editar equipo"/>
+            <input type="submit" value="Editar orden"/>
         </form>
     </div>
 {% endblock %}
