--- a/static/css/style.css
+++ b/static/css/style.css
@@ -447,7 +447,7 @@ table {
     .tabla th,
     .tabla td {
         border: 1px solid #8da2ad;
-        padding: 0.5rem;
+        padding: 0.3rem;
         width: 20%;
     }
 
@@ -462,35 +462,14 @@ table {
     }
 
     .boton-enlace {
-        display: inline-block;
-        padding: 0.3rem 0.1rem;
-        background-color: #8da2ad;
-        color: #e3e5ea;
-        text-align: center;
-        border-radius: 4px;
-        cursor: pointer;
-        border: 1px solid black;
         font-size: 1rem;
     }
 
-    .formulario-boton-eliminar {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
     .formulario-boton-eliminar .boton-eliminar {
-        background-color: #8da2ad;
-        color: #e3e5ea;
         font-size: 1.1rem;
         padding: 0.3rem 0.1rem;
-        border-radius: 4px;
-        cursor: pointer;
-        border: 1px solid black;
-        margin-bottom: 1rem;
         width: 6rem;
     }
-
 }
 
 /*Estilos para los formularios*/
@@ -535,7 +514,7 @@ form select {
     margin-left: 1rem;
 }
 
-select[name="empleados_asignados"] {
+select[name="empleados_asignados"], select[name="referencia_de_fabricacion"] {
     margin-bottom: 1.5rem;
     margin-left: 1rem;
     color: #333;
