depurar codigo, actualizar readme y borrar archivos innecesarios para la entrega

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -294,7 +294,7 @@ footer {
   }
 }
 
-/*Footer de abajo del todo de la pagina*/
+/*Footer de abajo*/
 
 .div-footer-abajo {
     background-color: black;
