Hover de "visualizar" y "modficar"

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -392,6 +392,11 @@ table {
      border: 1px solid black;
 }
 
+.boton-enlace:hover{
+    background-color: #738691;
+    color: #ffffff;
+}
+
 .formulario-boton-eliminar {
     display: flex;
     flex-direction: column;
