--- a/static/css/style.css
+++ b/static/css/style.css
@@ -645,11 +645,27 @@ form input[type="submit"]:hover{
 
 /*Estilos para el buscador de las listas*/
 
-.buscador-listas {
+.titulo-buscador {
+    height: 6rem;
+    display: block;
     width: 85%;
     margin: 0 auto;
+    margin-top: 2rem;
+    align-items: center;
+    position: relative;
+}
+
+.buscador-listas {
+    position: absolute;
+    right: 0;
     display: flex;
     justify-content: flex-end;
+    align-items: center;
+    height: 3rem;
+}
+
+.titulo-buscador h2 {
+    margin: 0 auto;
 }
 
 .botones-buscador {
@@ -672,10 +688,78 @@ form input[type="submit"]:hover{
     color: #ffffff;
 }
 
-
-
 .buscador-listas input[type="text"] {
     padding: 0.3rem 0.8rem;
     font-size: 1.5rem;
     border-radius: 1.5rem;
+}
+
+@media (max-width:767px) {
+
+    .titulo-buscador {
+        width: 85%;
+        display: block;
+        height: 6.5rem;
+    }
+
+    .botones-buscador {
+        font-size: 0.9rem;
+    }
+
+    .botones-buscador a {
+        font-size: 0.9rem;
+    }
+
+    .buscador-listas input[type="text"] {
+        font-size: 0.9rem;
+    }
+
+    .titulo-buscador h2 {
+        margin-bottom: 0.7rem;
+    }
+}
+
+@media (min-width:768px) and (max-width:1278px) {
+    .titulo-buscador {
+        width: 100%;
+        display: block;
+        height: 6.5rem;
+    }
+
+    .botones-buscador {
+        font-size: 1.1rem;
+    }
+
+    .botones-buscador a {
+        font-size: 1.1rem;
+    }
+
+    .buscador-listas input[type="text"] {
+        font-size: 1.1rem;
+    }
+
+    .titulo-buscador h2 {
+        margin-bottom: 0.7rem;
+    }
+}
+
+/* Estilos para las listas cuando en el buscador no encuentra nada */
+
+.sin-resultado {
+    font-size: 1.8rem;
+    color: #5a6d77;
+    display: flex;
+    flex-direction: column;
+     align-items: center;
+     height: 9rem;
+}
+
+.sin-resultado p {
+    margin: 0.5rem 0 0.8rem;
+}
+
+@media (max-width:767px) {
+    .sin-resultado {
+        font-size: 1.5rem;
+    }
 }
