--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <script rel="autocalcular.js" defer></script>
     <!-- Link para poder importar iconos -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
@@ -102,5 +101,6 @@
         </footer>
     </div>
     <script src="{% static 'js/buscador.js' %}"></script>
+    <script src="{% static 'js/validar.js' %}"></script>
 </body>
 </html>
