--- a/templates/appGestionProduccion/orden_list.html
+++ b/templates/appGestionProduccion/orden_list.html
@@ -1,6 +1,20 @@
 {% extends 'base.html' %}
 {% block contenido %}
-    <h2>Listado de órdenes</h2>
+    <div class="titulo-buscador">
+        <h2>Listado de órdenes</h2>
+        <div class="buscador-listas">
+            <form method="GET" action="{% url 'orden_list' %}">
+                <input id="input-buscador" type="text" name="q" placeholder="Buscar por nombre" value="{{ request.GET.q }}">
+                <button class="botones-buscador" type="submit">Buscar</button>
+                <button class="botones-buscador" type="submit"><a href="{% url 'orden_list' %}">Atrás</a></button>
+            </form>
+        </div>
+    </div>
+     <div class="sin-resultado" style="display: none;">
+        <p>Lo sentimos, no hay órdenes con el nombre <strong id="nombre-buscado"></strong>.</p>
+        <p>Si lo deseas, puedes crearla mediante este botón:</p>
+        <a href="{% url 'orden_create' %}" class="boton-enlace">Crear una orden</a>
+    </div>
     {% if ordenes %}
         <table class="tabla">
             <thead>
