--- a/templates/base.html
+++ b/templates/base.html
@@ -96,5 +96,8 @@
     </div>
     <script src="{% static 'js/buscador.js' %}"></script>
     <script src="{% static 'js/validar.js' %}"></script>
+    <script src="{% static 'js/modificarTamaño.js' %}"></script>
+
+
 </body>
 </html>
